--- a/CursoCSharp.csproj
+++ b/CursoCSharp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include=".Net7\interpolatedChain.cs" />
+  </ItemGroup>
+
 </Project>
